@@ -1,3 +1,9 @@
+Fri Apr 22 20:23:06 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
+
+	* Various 'cat' optimizations.
+
+	* More test cases in tests/.
+
 Tue Apr 19 17:12:09 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
 
 	* Remove extra ' ' and '\t' when joining backslashed lines.
